--- a/reference/bibliography.bib
+++ b/reference/bibliography.bib
@@ -1,355 +1,313 @@
+%% This BibTeX bibliography file was created using BibDesk.
+%% http://bibdesk.sourceforge.net/
+
+
+%% Created for Markus Beissinger at 2014-09-15 14:47:17 -0700 
+
+
+%% Saved with string encoding Unicode (UTF-8) 
+
+
+
 @article{bengio13,
-  author    = {Yoshua Bengio},
-  title     = {Deep Learning of Representations: Looking Forward},
-  journal   = {CoRR},
-  volume    = {abs/1305.0445},
-  year      = {2013},
-  ee        = {http://arxiv.org/abs/1305.0445},
-  bibsource = {DBLP, http://dblp.uni-trier.de}
-}
+	Author = {Yoshua Bengio},
+	Bibsource = {DBLP, http://dblp.uni-trier.de},
+	Ee = {http://arxiv.org/abs/1305.0445},
+	Journal = {CoRR},
+	Title = {Deep Learning of Representations: Looking Forward},
+	Volume = {abs/1305.0445},
+	Year = {2013}}
 
 @article{bengio12,
-  author    = {Yoshua Bengio and
-               Aaron C. Courville and
-               Pascal Vincent},
-  title     = {Unsupervised Feature Learning and Deep Learning: A Review
-               and New Perspectives},
-  journal   = {CoRR},
-  volume    = {abs/1206.5538},
-  year      = {2012},
-  ee        = {http://arxiv.org/abs/1206.5538},
-  bibsource = {DBLP, http://dblp.uni-trier.de}
-}
+	Author = {Yoshua Bengio and Aaron C. Courville and Pascal Vincent},
+	Bibsource = {DBLP, http://dblp.uni-trier.de},
+	Ee = {http://arxiv.org/abs/1206.5538},
+	Journal = {CoRR},
+	Title = {Unsupervised Feature Learning and Deep Learning: A Review and New Perspectives},
+	Volume = {abs/1206.5538},
+	Year = {2012}}
 
 @techreport{bach05,
-  author    = {Francis R. Bach and Michael I. Jordan},
-  title     = {A Probabilistic Interpretation of Canonical Correlation Analysis},
-  number = {688},
-  institution = {University of California, Berkeley},
-  month = {April},
-  day = {21},
-  year      = {2005},
-  file        = {http://www.stat.berkeley.edu/~jordan/688.pdf}
-}
+	Author = {Francis R. Bach and Michael I. Jordan},
+	Day = {21},
+	File = {http://www.stat.berkeley.edu/~jordan/688.pdf},
+	Institution = {University of California, Berkeley},
+	Month = {April},
+	Number = {688},
+	Title = {A Probabilistic Interpretation of Canonical Correlation Analysis},
+	Year = {2005}}
 
 @article{bengio13a,
-  author    = {Yoshua Bengio and
-               Li Yao and
-               Guillaume Alain and
-               Pascal Vincent},
-  title     = {Generalized Denoising Auto-Encoders as Generative Models},
-  journal   = {CoRR},
-  volume    = {abs/1305.6663},
-  year      = {2013},
-  ee        = {http://arxiv.org/abs/1305.6663},
-  bibsource = {DBLP, http://dblp.uni-trier.de}
-}
-
+	Author = {Yoshua Bengio and Li Yao and Guillaume Alain and Pascal Vincent},
+	Bibsource = {DBLP, http://dblp.uni-trier.de},
+	Ee = {http://arxiv.org/abs/1305.6663},
+	Journal = {CoRR},
+	Title = {Generalized Denoising Auto-Encoders as Generative Models},
+	Volume = {abs/1305.6663},
+	Year = {2013}}
 
 @inproceedings{vincent08,
-  author    = {Pascal Vincent and
-                Hugo Larochelle and
-                Yoshua Bengio and
-                Pierre-Antoine Manzagol},
-  title     = {Extracting and Composing Robust Features with Denoising Autoencoders},
-  booktitle = {Proceedings of the 25th International Conference on Machine Learning},
-  year      = {2008}
-}
+	Author = {Pascal Vincent and Hugo Larochelle and Yoshua Bengio and Pierre-Antoine Manzagol},
+	Booktitle = {Proceedings of the 25th International Conference on Machine Learning},
+	Title = {Extracting and Composing Robust Features with Denoising Autoencoders},
+	Year = {2008}}
 
 @inproceedings{krizhevsky12,
-  author    = {Alex Krizhevsky and
-                Ilya Sutskever and
-                Geoffrey E. Hinton},
-  title     = {ImageNet Classification with Deep Convolutional Neural Networks},
-  booktitle = {NIPS 2012: Neural Information Processing Systems},
-  year      = {2012}
-}
+	Author = {Alex Krizhevsky and Ilya Sutskever and Geoffrey E. Hinton},
+	Booktitle = {NIPS 2012: Neural Information Processing Systems},
+	Title = {ImageNet Classification with Deep Convolutional Neural Networks},
+	Year = {2012}}
 
 @article{bengio09,
- author = {Yoshua Bengio},
- title = {Learning Deep Architectures for AI},
- journal = {Found. Trends Mach. Learn.},
- issue_date = {January 2009},
- volume = {2},
- number = {1},
- month = {jan},
- year = {2009},
- issn = {1935-8237},
- pages = {1--127},
- numpages = {127},
- url = {http://dx.doi.org/10.1561/2200000006},
- doi = {10.1561/2200000006},
- acmid = {1658424},
- publisher = {Now Publishers Inc.},
- address = {Hanover, MA, USA}
-} 
+	Acmid = {1658424},
+	Address = {Hanover, MA, USA},
+	Author = {Yoshua Bengio},
+	Doi = {10.1561/2200000006},
+	Issn = {1935-8237},
+	Issue_Date = {January 2009},
+	Journal = {Found. Trends Mach. Learn.},
+	Month = {jan},
+	Number = {1},
+	Numpages = {127},
+	Pages = {1--127},
+	Publisher = {Now Publishers Inc.},
+	Title = {Learning Deep Architectures for AI},
+	Url = {http://dx.doi.org/10.1561/2200000006},
+	Volume = {2},
+	Year = {2009},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1561/2200000006}}
 
 @article{alain12,
-  author    = {Guillaume Alain and
-               Yoshua Bengio and
-               Salah Rifai},
-  title     = {Regularized Auto-Encoders Estimate Local Statistics},
-  journal   = {CoRR},
-  volume    = {abs/1211.4246},
-  year      = {2012},
-  ee        = {http://arxiv.org/abs/1211.4246},
-  bibsource = {DBLP, http://dblp.uni-trier.de}
-}
+	Author = {Guillaume Alain and Yoshua Bengio and Salah Rifai},
+	Bibsource = {DBLP, http://dblp.uni-trier.de},
+	Ee = {http://arxiv.org/abs/1211.4246},
+	Journal = {CoRR},
+	Title = {Regularized Auto-Encoders Estimate Local Statistics},
+	Volume = {abs/1211.4246},
+	Year = {2012}}
 
 @article{gsn,
-  author    = {Yoshua Bengio and
-               Eric Thibodeau-Laufer and
-               Jason Yosinski},
-  title     = {Deep Generative Stochastic Networks Trainable by Backprop},
-  journal   = {CoRR},
-  volume    = {abs/1306.1091},
-  year      = {2013},
-  ee        = {http://arxiv.org/abs/1306.1091},
-  bibsource = {DBLP, http://dblp.uni-trier.de}
-}
+	Author = {Yoshua Bengio and Eric Thibodeau-Laufer and Jason Yosinski},
+	Bibsource = {DBLP, http://dblp.uni-trier.de},
+	Ee = {http://arxiv.org/abs/1306.1091},
+	Journal = {CoRR},
+	Title = {Deep Generative Stochastic Networks Trainable by Backprop},
+	Volume = {abs/1306.1091},
+	Year = {2013}}
 
-@inproceedings {lenet5,
-original =      {orig/lecun-01a.ps.gz},
-author =  {Yann LeCun and
-          Leon Bottou and
-          Yoshua Bengio and
-          Patrick Haffner},
-title =   {Gradient-Based Learning Applied to Document Recognition},
-booktitle =     {Intelligent Signal Processing},
-editors =       {Haykin, S. and Kosko, B.},
-pages =         {306-351},
-publisher =     {IEEE Press},
-year =    {2001}
-}
+@inproceedings{lenet5,
+	Author = {Yann LeCun and Leon Bottou and Yoshua Bengio and Patrick Haffner},
+	Booktitle = {Intelligent Signal Processing},
+	Editors = {Haykin, S. and Kosko, B.},
+	Original = {orig/lecun-01a.ps.gz},
+	Pages = {306-351},
+	Publisher = {IEEE Press},
+	Title = {Gradient-Based Learning Applied to Document Recognition},
+	Year = {2001}}
 
-@inproceedings {seide11,
-author       = {Frank Seide and Gang Li and Dong Yu},
-booktitle    = {Interspeech 2011},
-month        = {August},
-publisher    = {International Speech Communication Association},
-title        = {Conversational Speech Transcription Using Context-Dependent Deep Neural Networks},
-url          = {http://research.microsoft.com/apps/pubs/default.aspx?id=153169},
-year         = {2011}
-}
+@inproceedings{seide11,
+	Author = {Frank Seide and Gang Li and Dong Yu},
+	Booktitle = {Interspeech 2011},
+	Month = {August},
+	Publisher = {International Speech Communication Association},
+	Title = {Conversational Speech Transcription Using Context-Dependent Deep Neural Networks},
+	Url = {http://research.microsoft.com/apps/pubs/default.aspx?id=153169},
+	Year = {2011},
+	Bdsk-Url-1 = {http://research.microsoft.com/apps/pubs/default.aspx?id=153169}}
 
 @inproceedings{rezende14,
-  author    = {Danilo J. Rezende and Shakir Mohamed and Daan Wierstra},
-  title     = {Stochastic Backpropagation and Approximate Inference in Deep Generateive Models},
-  booktitle = {Proceedings of the 31st International Conference on Machine Learning},
-  year      = {2014}
-}
+	Author = {Danilo J. Rezende and Shakir Mohamed and Daan Wierstra},
+	Booktitle = {Proceedings of the 31st International Conference on Machine Learning},
+	Title = {Stochastic Backpropagation and Approximate Inference in Deep Generateive Models},
+	Year = {2014}}
 
 @inproceedings{andrew12,
-  author    = {Galen Andrew and Jeff Bilmes},
-  title     = {Sequential Deep Belief Networks},
-  booktitle = {2012 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)},
-  year      = {2012}
-}
+	Author = {Galen Andrew and Jeff Bilmes},
+	Booktitle = {2012 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)},
+	Title = {Sequential Deep Belief Networks},
+	Year = {2012}}
 
 @inproceedings{andrew13,
-  author    = {Galen Andrew and Jeff Bilmes},
-  title     = {Backpropagation in Sequential Deep Neural Networks},
-  booktitle = {NIPS Deep Learning Workshop},
-  year      = {2013}
-}
+	Author = {Galen Andrew and Jeff Bilmes},
+	Booktitle = {NIPS Deep Learning Workshop},
+	Title = {Backpropagation in Sequential Deep Neural Networks},
+	Year = {2013}}
 
 @inproceedings{socher11,
-author = {Richard Socher and Cliff C. Lin and Andrew Y. Ng and Christopher D. Manning},
-title = {Parsing Natural Scenes and Natural Language with Recursive Neural Networks},
-booktitle = {Proceedings of the 26th International Conference on Machine Learning (ICML)},
-year = {2011}
-}
+	Author = {Richard Socher and Cliff C. Lin and Andrew Y. Ng and Christopher D. Manning},
+	Booktitle = {Proceedings of the 26th International Conference on Machine Learning (ICML)},
+	Title = {Parsing Natural Scenes and Natural Language with Recursive Neural Networks},
+	Year = {2011}}
 
 @techreport{sutskever06,
-    author = {Ilya Sutskever and Geoffrey Hinton},
-    title = {Learning multilevel distributed representations for high-dimensional sequences},
-    institution = {University of Toronto},
-    year = {2006}
-}
+	Author = {Ilya Sutskever and Geoffrey Hinton},
+	Institution = {University of Toronto},
+	Title = {Learning multilevel distributed representations for high-dimensional sequences},
+	Year = {2006}}
 
 @inproceedings{sutskever08,
-author = {Ilya Sutskever and Geoffrey Hinton and Graham Taylor},
-title = {The Recurrent Temporal Restricted Boltzmann Machine},
-booktitle = {Advances in Neural Information Processing Systems 21 (NIPS 2008)},
-year = {2008}
-}
+	Author = {Ilya Sutskever and Geoffrey Hinton and Graham Taylor},
+	Booktitle = {Advances in Neural Information Processing Systems 21 (NIPS 2008)},
+	Title = {The Recurrent Temporal Restricted Boltzmann Machine},
+	Year = {2008}}
 
 @techreport{lockett09,
-title={Temporal Convolution Machines for Sequence Learning},
-author={Alan J Lockett and Risto Miikkulainen},
-number={AI-09-04},
-institution={Department of Computer Sciences, the University of Texas at Austin},
-year={2009}
-}
+	Author = {Alan J Lockett and Risto Miikkulainen},
+	Institution = {Department of Computer Sciences, the University of Texas at Austin},
+	Number = {AI-09-04},
+	Title = {Temporal Convolution Machines for Sequence Learning},
+	Year = {2009}}
 
 @inproceedings{lewandowski12,
-author = {Nicolas Boulanger-Lewandowski and Yoshua Bengio and Pascal Vincent},
-title = {Modeling Temporal Dependencies in High-Dimensional Sequences: Application to Polyphonic Music Generation and Transcription},
-booktitle = {Proceedings of the 29th International Conference on Machine Learning (ICML 2012)},
-year = {2012}
-}
+	Author = {Nicolas Boulanger-Lewandowski and Yoshua Bengio and Pascal Vincent},
+	Booktitle = {Proceedings of the 29th International Conference on Machine Learning (ICML 2012)},
+	Title = {Modeling Temporal Dependencies in High-Dimensional Sequences: Application to Polyphonic Music Generation and Transcription},
+	Year = {2012}}
 
 @article{hinton06,
- author = {Geoffrey E. Hinton and Simon Osindero and Yee-Whye Teh},
- title = {A Fast Learning Algorithm for Deep Belief Nets},
- journal = {Neural Computation},
- issue_date = {July 2006},
- volume = {18},
- number = {7},
- month = jul,
- year = {2006},
- issn = {0899-7667},
- pages = {1527--1554},
- numpages = {28},
- url = {http://dx.doi.org/10.1162/neco.2006.18.7.1527},
- doi = {10.1162/neco.2006.18.7.1527},
- acmid = {1161605},
- publisher = {MIT Press},
- address = {Cambridge, MA, USA}
-} 
+	Acmid = {1161605},
+	Address = {Cambridge, MA, USA},
+	Author = {Geoffrey E. Hinton and Simon Osindero and Yee-Whye Teh},
+	Doi = {10.1162/neco.2006.18.7.1527},
+	Issn = {0899-7667},
+	Issue_Date = {July 2006},
+	Journal = {Neural Computation},
+	Month = jul,
+	Number = {7},
+	Numpages = {28},
+	Pages = {1527--1554},
+	Publisher = {MIT Press},
+	Title = {A Fast Learning Algorithm for Deep Belief Nets},
+	Url = {http://dx.doi.org/10.1162/neco.2006.18.7.1527},
+	Volume = {18},
+	Year = {2006},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1162/neco.2006.18.7.1527}}
 
 @inproceedings{ranzato07,
-author = {Marc'Aurelio Ranzato and Yann LeCun},
-title = {A Sparse and Locally Shift Invariant Feature Extractor Applied to Document Images},
-booktitle = {International Conference on Document Analysis and Recognition (ICDAR 2007)},
-year = {2007}
-}
+	Author = {Marc'Aurelio Ranzato and Yann LeCun},
+	Booktitle = {International Conference on Document Analysis and Recognition (ICDAR 2007)},
+	Title = {A Sparse and Locally Shift Invariant Feature Extractor Applied to Document Images},
+	Year = {2007}}
 
 @inproceedings{wang13,
-author = {Mengqiu Wang and Christopher D. Manning},
-title = {Effect of Non-linear Deep Architecture in Sequence Labeling},
-booktitle = {Proceedings of the 6th International Joint Conference on Natural Language Processing (IJCNLP)},
-year = {2013}
-}
+	Author = {Mengqiu Wang and Christopher D. Manning},
+	Booktitle = {Proceedings of the 6th International Joint Conference on Natural Language Processing (IJCNLP)},
+	Title = {Effect of Non-linear Deep Architecture in Sequence Labeling},
+	Year = {2013}}
 
 @inproceedings{bengio_workshop,
-author = {Yoshua Bengio},
-title = {Invited Tutorial: Deep Learning of Representations},
-booktitle = {Proceedings of the 27th Canadian Conference on Artificial Intelligence},
-year = {2014}
-}
+	Author = {Yoshua Bengio},
+	Booktitle = {Proceedings of the 27th Canadian Conference on Artificial Intelligence},
+	Title = {Invited Tutorial: Deep Learning of Representations},
+	Year = {2014}}
 
 @article{ozair14,
-  author    = {Sherjil Ozair and
-               Li Yao and
-               Yoshua Bengio},
-  title     = {Multimodal Transitions for Generative Stochastic Networks},
-  journal   = {CoRR},
-  volume    = {abs/1312.5578},
-  year      = {2013},
-  ee        = {http://arxiv.org/abs/1312.5578},
-  bibsource = {DBLP, http://dblp.uni-trier.de}
-}
+	Author = {Sherjil Ozair and Li Yao and Yoshua Bengio},
+	Bibsource = {DBLP, http://dblp.uni-trier.de},
+	Ee = {http://arxiv.org/abs/1312.5578},
+	Journal = {CoRR},
+	Title = {Multimodal Transitions for Generative Stochastic Networks},
+	Volume = {abs/1312.5578},
+	Year = {2013}}
 
 @inproceedings{zhou14,
-author = {Jian Zhou and Olga G. Troyanskaya},
-title = {Deep Supervised and Convolutional Generative Stochastic Network for Protein Secondary Structure Prediction},
-booktitle = {Proceedings of the 31st International Conference on Machine Learning (ICML 2014)},
-year = {2014}
-}
+	Author = {Jian Zhou and Olga G. Troyanskaya},
+	Booktitle = {Proceedings of the 31st International Conference on Machine Learning (ICML 2014)},
+	Title = {Deep Supervised and Convolutional Generative Stochastic Network for Protein Secondary Structure Prediction},
+	Year = {2014}}
 
 @inproceedings{larochelle07,
- author = {Hugo Larochelle and Dumitru Erhan and Aaron Courville and James Bergstra and Yoshua Bengio},
- title = {An Empirical Evaluation of Deep Architectures on Problems with Many Factors of Variation},
- booktitle = {Proceedings of the 24th International Conference on Machine Learning},
- series = {ICML '07},
- year = {2007},
- isbn = {978-1-59593-793-3},
- location = {Corvalis, Oregon},
- pages = {473--480},
- numpages = {8},
- url = {http://doi.acm.org/10.1145/1273496.1273556},
- doi = {10.1145/1273496.1273556},
- acmid = {1273556},
- publisher = {ACM},
- address = {New York, NY, USA}
-}
+	Acmid = {1273556},
+	Address = {New York, NY, USA},
+	Author = {Hugo Larochelle and Dumitru Erhan and Aaron Courville and James Bergstra and Yoshua Bengio},
+	Booktitle = {Proceedings of the 24th International Conference on Machine Learning},
+	Doi = {10.1145/1273496.1273556},
+	Isbn = {978-1-59593-793-3},
+	Location = {Corvalis, Oregon},
+	Numpages = {8},
+	Pages = {473--480},
+	Publisher = {ACM},
+	Series = {ICML '07},
+	Title = {An Empirical Evaluation of Deep Architectures on Problems with Many Factors of Variation},
+	Url = {http://doi.acm.org/10.1145/1273496.1273556},
+	Year = {2007},
+	Bdsk-Url-1 = {http://doi.acm.org/10.1145/1273496.1273556},
+	Bdsk-Url-2 = {http://dx.doi.org/10.1145/1273496.1273556}}
 
 @article{bengio12a,
-  author    = {Yoshua Bengio and
-               Gr{\'e}goire Mesnil and
-               Yann Dauphin and
-               Salah Rifai},
-  title     = {Better Mixing via Deep Representations},
-  journal   = {CoRR},
-  volume    = {abs/1207.4404},
-  year      = {2012},
-  ee        = {http://arxiv.org/abs/1207.4404},
-  bibsource = {DBLP, http://dblp.uni-trier.de}
-}
+	Author = {Yoshua Bengio and Gr{\'e}goire Mesnil and Yann Dauphin and Salah Rifai},
+	Bibsource = {DBLP, http://dblp.uni-trier.de},
+	Ee = {http://arxiv.org/abs/1207.4404},
+	Journal = {CoRR},
+	Title = {Better Mixing via Deep Representations},
+	Volume = {abs/1207.4404},
+	Year = {2012}}
 
 @inproceedings{bengio06,
-    author = {Yoshua Bengio and Pascal Lamblin and Dan Popovici and Hugo Larochelle},
-     title = {Greedy Layer-Wise Training of Deep Networks},
-      year = {2007},
-     pages = {153--160},
-       url = {http://www.iro.umontreal.ca/~lisa/pointeurs/BengioNips2006All.pdf},
-  crossref = {NIPS19}
-}
+	Author = {Yoshua Bengio and Pascal Lamblin and Dan Popovici and Hugo Larochelle},
+	Crossref = {NIPS19},
+	Pages = {153--160},
+	Title = {Greedy Layer-Wise Training of Deep Networks},
+	Url = {http://www.iro.umontreal.ca/~lisa/pointeurs/BengioNips2006All.pdf},
+	Year = {2007},
+	Bdsk-Url-1 = {http://www.iro.umontreal.ca/~lisa/pointeurs/BengioNips2006All.pdf}}
 
 @inproceedings{socher11a,
- author = {Richard Socher and Jeffrey Pennington and Eric H. Huang and Andrew Y. Ng and Christopher D. Manning},
- title = {Semi-supervised Recursive Autoencoders for Predicting Sentiment Distributions},
- booktitle = {Proceedings of the Conference on Empirical Methods in Natural Language Processing},
- series = {EMNLP '11},
- year = {2011},
- isbn = {978-1-937284-11-4},
- location = {Edinburgh, United Kingdom},
- pages = {151--161},
- numpages = {11},
- url = {http://dl.acm.org/citation.cfm?id=2145432.2145450},
- acmid = {2145450},
- publisher = {Association for Computational Linguistics},
- address = {Stroudsburg, PA, USA}
-}
+	Acmid = {2145450},
+	Address = {Stroudsburg, PA, USA},
+	Author = {Richard Socher and Jeffrey Pennington and Eric H. Huang and Andrew Y. Ng and Christopher D. Manning},
+	Booktitle = {Proceedings of the Conference on Empirical Methods in Natural Language Processing},
+	Isbn = {978-1-937284-11-4},
+	Location = {Edinburgh, United Kingdom},
+	Numpages = {11},
+	Pages = {151--161},
+	Publisher = {Association for Computational Linguistics},
+	Series = {EMNLP '11},
+	Title = {Semi-supervised Recursive Autoencoders for Predicting Sentiment Distributions},
+	Url = {http://dl.acm.org/citation.cfm?id=2145432.2145450},
+	Year = {2011},
+	Bdsk-Url-1 = {http://dl.acm.org/citation.cfm?id=2145432.2145450}}
 
 @article{rolfe13,
-  author    = {Jason Tyler Rolfe and
-               Yann LeCun},
-  title     = {Discriminative Recurrent Sparse Auto-Encoders},
-  journal   = {CoRR},
-  volume    = {abs/1301.3775},
-  year      = {2013},
-  ee        = {http://arxiv.org/abs/1301.3775},
-  bibsource = {DBLP, http://dblp.uni-trier.de}
-}
+	Author = {Jason Tyler Rolfe and Yann LeCun},
+	Bibsource = {DBLP, http://dblp.uni-trier.de},
+	Ee = {http://arxiv.org/abs/1301.3775},
+	Journal = {CoRR},
+	Title = {Discriminative Recurrent Sparse Auto-Encoders},
+	Volume = {abs/1301.3775},
+	Year = {2013}}
 
 @inproceedings{rifai12,
-    author = {Salah Rifai and Yoshua Bengio and Yann Dauphin and Pascal Vincent},
-     title = {A Generative Process for Sampling Contractive Auto-Encoders},
-      year = {2012},
-  location = {Edinburgh, Scotland, U.K.},
-  crossref = {ICML12}
-}
+	Author = {Salah Rifai and Yoshua Bengio and Yann Dauphin and Pascal Vincent},
+	Crossref = {ICML12},
+	Location = {Edinburgh, Scotland, U.K.},
+	Title = {A Generative Process for Sampling Contractive Auto-Encoders},
+	Year = {2012}}
 
-@InProceedings{ bergstra-proc-scipy-2010,
-  author    = { James Bergstra and Olivier Breuleux and Fr\'ed\'eric Bastien and Pascal Lamblin and Razvan Pascanu and Guillaume Desjardins and Joseph Turian and David Warde-Farley and Yoshua Bengio },
-  title     = { Theano: A CPU and GPU Math Compiler in Python },
-  booktitle = { Proceedings of the 9th Python in Science Conference },
-  pages     = { 3 - 10 },
-  year      = { 2010 },
-  editor    = { St\'efan van der Walt and Jarrod Millman }
-}
+@inproceedings{bergstra-proc-scipy-2010,
+	Author = {James Bergstra and Olivier Breuleux and Fr\'ed\'eric Bastien and Pascal Lamblin and Razvan Pascanu and Guillaume Desjardins and Joseph Turian and David Warde-Farley and Yoshua Bengio},
+	Booktitle = {Proceedings of the 9th Python in Science Conference},
+	Editor = {St\'efan van der Walt and Jarrod Millman},
+	Pages = {3 - 10},
+	Title = {Theano: A CPU and GPU Math Compiler in Python},
+	Year = {2010}}
 
 @article{bengio12b,
-  author    = {Yoshua Bengio and
-               Aaron C. Courville and
-               Pascal Vincent},
-  title     = {Unsupervised Feature Learning and Deep Learning: A Review
-               and New Perspectives},
-  journal   = {CoRR},
-  volume    = {abs/1206.5538},
-  year      = {2012},
-  ee        = {http://arxiv.org/abs/1206.5538},
-  bibsource = {DBLP, http://dblp.uni-trier.de}
-}
+	Author = {Yoshua Bengio and Aaron C. Courville and Pascal Vincent},
+	Bibsource = {DBLP, http://dblp.uni-trier.de},
+	Ee = {http://arxiv.org/abs/1206.5538},
+	Journal = {CoRR},
+	Title = {Unsupervised Feature Learning and Deep Learning: A Review and New Perspectives},
+	Volume = {abs/1206.5538},
+	Year = {2012}}
 
-@incollection{Bengio+chapter2007,
-     author = {Yoshua Bengio and Yann LeCun},
-     editor = {Bottou, {L{\'{e}}on} and Chapelle, Olivier and DeCoste, D. and Weston, J.},
-      title = {Scaling Learning Algorithms towards {AI}},
-  booktitle = {Large Scale Kernel Machines},
-       year = {2007},
-  publisher = {MIT Press},
-        url = {http://www.iro.umontreal.ca/~lisa/pointeurs/bengio+lecun_chapter2007.pdf}
-}
+@incollection{Bengio_scaling,
+	Author = {Yoshua Bengio and Yann LeCun},
+	Booktitle = {Large Scale Kernel Machines},
+	Date-Modified = {2014-09-15 21:47:17 +0000},
+	Editor = {Bottou, {L{\'{e}}on} and Chapelle, Olivier and DeCoste, D. and Weston, J.},
+	Publisher = {MIT Press},
+	Title = {Scaling Learning Algorithms towards {AI}},
+	Url = {http://www.iro.umontreal.ca/~lisa/pointeurs/bengio+lecun_chapter2007.pdf},
+	Year = {2007},
+	Bdsk-Url-1 = {http://www.iro.umontreal.ca/~lisa/pointeurs/bengio+lecun_chapter2007.pdf}}
