Updating with new model names and new research on rnn

--- a/main.tex
+++ b/main.tex
@@ -81,13 +81,13 @@
 	\chapter{General Methodology: Deep Generative Stochastic Networks (GSN)}
 	\input{chapters/general_methodology}
 	
-	\chapter{Model 1: Expectation Maximization method for training a recurrent deep GSN}
+	\chapter{Model 1: Temporal GSN (TGSN)}
 	\input{chapters/model1}
 	
-	\chapter{Model 2: Online method for training a recurrent deep GSN}	
+	\chapter{Model 2: Recurrent GSN (RNN-GSN)}	
 	\input{chapters/model2}
 
-	\chapter{Model 3: Hybrid method for training a recurrent deep GSN}	
+	\chapter{Model 3: Recurrent Temporal GSN (RT-GSN)}	
 	\input{chapters/model3}
 	
 	\chapter{Discussion of Results}
