wip, transfer to desktop

--- a/main.tex
+++ b/main.tex
@@ -31,7 +31,7 @@
 	
 	\begin{titlepage}
 		\begin{center}
-			{\singlespacing \LARGE \uppercase{Deep Generative Stochastic Networks for Sequence Prediction}\\[24pt]}
+			{\singlespacing \LARGE \uppercase{Deep Generative Networks for Sequence Prediction}\\[24pt]}
 			
 			{\Large Markus B. Beissinger\\[12pt]}
 			
@@ -41,7 +41,7 @@
 			
 			Presented to the Faculties of the University of Pennsylvania in Partial Fulfillment of the Requirements for the Degree of Master of Science in Engineering\\[12pt]
 			
-			2014\\[60pt]
+			2017\\[60pt]
 			
 			\singlespacing
 			\makebox[2.5in]{\hrulefill}\\
@@ -59,7 +59,7 @@
 	\pagenumbering{roman}
 
 	\chapter*{Acknowledgements}
-	I would like to thank Lyle Ungar for his invaluable insights and methods of thinking throughout advising this thesis. I would also like to thank Mark Liberman (CIS, Linguistics, University of Pennsylvania) and Mitch Marcus (CIS, University of Pennsylvania) for their work on the thesis committee. Finally, I would like to thank Li Yao (Computer Science and Operations Research, Universit\'{e} de Montr\'{e}al) from Yoshua Bengio\rq{}s group for the Theano framework and help with starter code.
+	I would like to thank Lyle Ungar for his invaluable insights and methods of thinking throughout advising this thesis. I would also like to thank Mark Liberman (CIS, Linguistics, University of Pennsylvania) and Mitch Marcus (CIS, University of Pennsylvania) for their work on the thesis committee, and Li Yao (Computer Science and Operations Research, Universit\'{e} de Montr\'{e}al) for help with the Theano starter code. Finally, I would like to thank the rest of the Lobe team (lobe.ai) for prototype tooling.
 	
 	\chapter*{Abstract}
 	\input{chapters/abstract}
