--- a/main.tex
+++ b/main.tex
@@ -49,7 +49,7 @@
 			Supervisor of Thesis\\[48pt]
 			
 			\makebox[2.5in]{\hrulefill}\\
-			Val Tannen\\
+			Lyle H. Ungar\\
 			Graduate Group Chairperson
 			
 			\doublespacing
@@ -59,7 +59,7 @@
 	\pagenumbering{roman}
 
 	\chapter*{Acknowledgements}
-	I would like to thank Lyle Ungar for his invaluable insights and methods of thinking throughout advising this thesis. I would also like to thank Mark Liberman (CIS, Linguistics, University of Pennsylvania) and Mitch Marcus (CIS, University of Pennsylvania) for their work on the thesis committee, and Li Yao (Computer Science and Operations Research, Universit\'{e} de Montr\'{e}al) for help with the Theano starter code. Finally, I would like to thank the rest of the Lobe team (lobe.ai) for prototype tooling.
+	I would like to thank Lyle Ungar for his invaluable insights and methods of thinking throughout advising this thesis. I would also like to thank Mark Liberman (CIS, Linguistics, University of Pennsylvania) and Mitch Marcus (CIS, University of Pennsylvania) for their work on the thesis committee, and Li Yao and Sherjil Ozair (Computer Science and Operations Research, Universit\'{e} de Montr\'{e}al) for help with the GSN starter code.
 	
 	\chapter*{Abstract}
 	\input{chapters/abstract}
@@ -87,7 +87,7 @@
 	\chapter{Model 2: Recurrent GSN (RNN-GSN)}	
 	\input{chapters/model2}
 
-	\chapter{Model 3: Recurrent Temporal GSN (RT-GSN)}	
+	\chapter{Model 3: Sequence Encoder Network (SEN)}	
 	\input{chapters/model3}
 	
 	\chapter{Discussion of Results}
