--- a/reference/bibliography.bib
+++ b/reference/bibliography.bib
@@ -2,12 +2,22 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Markus Beissinger at 2014-09-15 14:47:17 -0700 
+%% Created for Markus Beissinger at 2017-12-11 21:18:26 -0800 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@inproceedings{mathis-mozer,
+	Author = {Donald W. Mathis and Michael C. Mozer},
+	Booktitle = {Proceedings of the Eighteenth Annual Conference of the Cognitive Science Society},
+	Date-Added = {2017-12-12 05:15:06 +0000},
+	Date-Modified = {2017-12-12 05:18:01 +0000},
+	Pages = { 324--328},
+	Publisher = {Erlbaum},
+	Title = {Conscious and Unconscious Perception: A Computational Theory},
+	Year = {1996}}
 
 @article{bengio13,
 	Author = {Yoshua Bengio},
